--- a/Practice/TodoList_Redux/package.json
+++ b/Practice/TodoList_Redux/package.json
@@ -17,6 +17,11 @@
     "babel-preset-stage-0": "^6.22.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.0",
+    "redux-promise-middleware": "^4.2.0",
+    "redux-thunk": "^2.2.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.14.1"
   },
